--- a/Roamni/Main.storyboard
+++ b/Roamni/Main.storyboard
@@ -1204,7 +1204,7 @@
                     </connections>
                 </pongPressGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="3160.8000000000002" y="-2019.9400299850076"/>
+            <point key="canvasLocation" x="3327" y="-2067"/>
         </scene>
         <!--How To Make Money With Roam-->
         <scene sceneID="jmM-IT-bvO">
